--- a/assets/sass/inc/_i-setting.scss
+++ b/assets/sass/inc/_i-setting.scss
@@ -5,6 +5,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Shippori+Mincho:wght@600&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;700display=swap');
 
+@font-face {
+  font-family: 'Hind_m';
+  src: url('/recruit/assets/fonts/Hind/Hind-Medium.ttf') format('truetype');
+}
+
 /*
 i-setting
 -----------------------------------------------------*/
