--- a/assets/sass/object/project/_p-home.scss
+++ b/assets/sass/object/project/_p-home.scss
@@ -174,7 +174,8 @@ p-home
         font-weight: 500;
         list-style: 1;
         display: block;
-        font-family: 'Hind', sans-serif;
+        //font-family: 'Hind', sans-serif;
+        font-family: 'Hind_m', sans-serif;
       }
       em.bracketsL {
         margin-left: -20px;
@@ -229,7 +230,8 @@ p-home
           font-weight: 500;
           list-style: 1;
           display: block;
-          font-family: 'Hind', sans-serif;
+          //font-family: 'Hind', sans-serif;
+          font-family: 'Hind_m', sans-serif;
         }
       }
     }
@@ -249,7 +251,8 @@ p-home
           font-weight: 500;
           list-style: 1;
           display: block;
-          font-family: 'Hind', sans-serif;
+          //font-family: 'Hind', sans-serif;
+          font-family: 'Hind_m', sans-serif;
         }
       }
     }
@@ -319,7 +322,8 @@ p-home
           font-weight: 500;
           list-style: 1;
           display: block;
-          font-family: 'Hind', sans-serif;
+          //font-family: 'Hind', sans-serif;
+          font-family: 'Hind_m', sans-serif;
         }
       }
       p {
