--- a/assets/sass/object/project/_p-zadankai.scss
+++ b/assets/sass/object/project/_p-zadankai.scss
@@ -9,7 +9,8 @@ p-zadankai
     display: block;
     text-align: center;
     h2 {
-      font-family: 'Hind', sans-serif;
+      //font-family: 'Hind', sans-serif;
+      font-family: 'Hind_m', sans-serif;
       @include inc.sizingRem(font-size, tab, 18px, sp, 12px);
       font-weight: 500;
       text-align: center;
@@ -68,7 +69,8 @@ p-zadankai
       left: 0;
       @include inc.sizing(margin-top, wide, 35px, sp, 16px);
       @include inc.sizing(margin-left, wide, 48px, sp, 20px);
-      font-family: 'Hind', sans-serif;
+      //font-family: 'Hind', sans-serif;
+      font-family: 'Hind_m', sans-serif;
     }
     &.--q-title02 {
       &::before {
