--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -643,6 +643,15 @@ c-text
   font-weight: 700;
   display: block;
 }
+.c-text--h2.-L {
+  padding-left: clamp(16px, 0.72vw + 12.7px, 24px);
+  padding-right: clamp(16px, 0.72vw + 12.7px, 24px);
+  padding-top: clamp(12px, 0.36vw + 10.4px, 16px);
+  padding-bottom: clamp(12px, 0.36vw + 10.4px, 16px);
+  margin-bottom: clamp(32px, 1.44vw + 25.4px, 48px);
+  border-radius: clamp(4px, 0.36vw + 2.4px, 8px);
+  background: #ECF1FA;
+}
 .c-text--h3 {
   font-size: clamp(1rem, 0.36vw + 0.9rem, 1.25rem);
   line-height: clamp(24px, 0.54vw + 21.5px, 30px);
@@ -1043,6 +1052,11 @@ p-footer
   .p-footer__banner-list-item.-yellow:hover::after {
     right: 10.5%;
   }
+}
+.p-footer__banner-list-item.-yellow.-arw::after {
+  width: 20px;
+  height: 20px;
+  background: url(../img/arw/yellow_right.svg) no-repeat 50% 50%;
 }
 .p-footer__banner-list-faq {
   margin: 2.5rem auto 0;
@@ -1492,6 +1506,11 @@ p-header
   .p-header__nav-entry:hover span::after {
     right: -2px;
   }
+}
+.p-header__nav-entry.-arw span::after {
+  width: 13px;
+  height: 13px;
+  background: url(../img/arw/yellow_right.svg) no-repeat 0 0;
 }
 .p-header__sp {
   position: fixed;
@@ -2389,13 +2408,13 @@ p-text-box
 }
 @media screen and (min-width: 900px) {
   #case01 .case_img::after,
-#case02 .case_img::after,
-#case03 .case_img::after,
-#case04 .case_img::after,
-#case05 .case_img::after,
-#case06 .case_img::after,
-#case07 .case_img::after,
-#case08 .case_img::after {
+  #case02 .case_img::after,
+  #case03 .case_img::after,
+  #case04 .case_img::after,
+  #case05 .case_img::after,
+  #case06 .case_img::after,
+  #case07 .case_img::after,
+  #case08 .case_img::after {
     display: block;
   }
 }
@@ -3813,6 +3832,12 @@ p-guideline
   padding-bottom: 0;
   margin-bottom: 0;
 }
+.p-guideline > dl > div > dd > p span {
+  font-size: clamp(0.8125rem, 0.09vw + 0.7875rem, 0.875rem);
+  padding-top: 0.6rem;
+  display: block;
+  line-height: 1.6;
+}
 .p-guideline > dl > div > dd > dl > div {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -3830,6 +3855,10 @@ p-guideline
 }
 .p-guideline > dl > div > dd > dl > div > dd {
   width: auto;
+}
+.p-guideline > dl + .c-text--h3 {
+  margin-top: clamp(32px, 1.44vw + 25.4px, 48px);
+  margin-bottom: clamp(24px, 0.72vw + 20.7px, 32px);
 }
 .p-guideline--flow {
   list-style-type: none;
@@ -3864,6 +3893,66 @@ p-guideline
   position: absolute;
   left: calc(50% - 10px);
   bottom: -22px;
+}
+
+.btn-entry {
+  margin: 0 auto;
+  max-width: 400px;
+  width: 100%;
+  height: 5rem;
+  border-radius: 2.5rem;
+  -webkit-transition: all 0.1s ease-out;
+  transition: all 0.1s ease-out;
+  -webkit-transition: background-color 0.3s linear;
+  transition: background-color 0.3s linear;
+  background: #FFEA00;
+  position: relative;
+}
+.btn-entry span {
+  color: #1B6EC3;
+  font-weight: 700;
+  width: 100%;
+  height: 100%;
+  padding: 0 2rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  font-size: clamp(1rem, 0.54vw + 0.84375rem, 1.375rem);
+}
+.btn-entry::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  background: url(../img/arw/yellow_right.svg) no-repeat 50% 50%;
+  background-size: contain;
+  position: absolute;
+  right: 11%;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+          transform: translate(0, -50%);
+  -webkit-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
+}
+@media screen and (min-width: 1280px) {
+  .btn-entry::after {
+    width: 20px;
+    height: 20px;
+  }
+}
+@media (hover: hover) {
+  .btn-entry:hover {
+    background-color: #FFF6A3;
+  }
+  .btn-entry:hover::after {
+    right: 10.5%;
+  }
 }
 
 /*
