--- a/assets/sass/object/project/_p-guideline.scss
+++ b/assets/sass/object/project/_p-guideline.scss
@@ -113,50 +113,58 @@ p-guideline
   transition: background-color 0.3s linear;
   background: inc.$color-yel;
   position: relative;
-  span {
-    color: #1B6EC3;
-    font-weight: 700;
-    width: 100%;
-    height: 100%;
-    padding: 0 2rem;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    font-size: clamp(1rem, 0.54vw + 0.84375rem, 1.375rem);
-  }
-  &::after {
-    content: "";
-    width: 20px;
-    height: 20px;
-    background: url(../img/arw/yellow_right.svg) no-repeat 50% 50%;
-    background-size: contain;
-    position: absolute;
-    right: 11%;
-    top: 50%;
-    transform: translate(0, -50%);
-    -webkit-transition: all 0.3s ease-out;
-    transition: all 0.3s ease-out;
-  }
-  @include inc.mq(vr) {
+  a {
+    span {
+      color: #1B6EC3;
+      font-weight: 700;
+      width: 100%;
+      height: 100%;
+      padding: 0 2rem;
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      -webkit-box-pack: center;
+      -ms-flex-pack: center;
+      justify-content: center;
+      font-size: clamp(1rem, 0.54vw + 0.84375rem, 1.375rem);
+    }
     &::after {
+      content: "";
       width: 20px;
       height: 20px;
+      background: url(../img/arw/yellow_right.svg) no-repeat 50% 50%;
+      background-size: contain;
+      position: absolute;
+      right: 11%;
+      top: 50%;
+      transform: translate(0, -50%);
+      -webkit-transition: all 0.3s ease-out;
+      transition: all 0.3s ease-out;
     }
-  }
-  @media (hover: hover) {
-    &:hover {
-      background-color: inc.$color-light-yel;
+    @include inc.mq(vr) {
       &::after {
-        right: 10.5%;
+        width: 20px;
+        height: 20px;
       }
     }
+    @media (hover: hover) {
+      &:hover {
+        background-color: inc.$color-light-yel;
+        &::after {
+          right: 10.5%;
+        }
+      }
+    }
+  }
+  .caption {
+    display: block;
+    text-align: center;
+    @include inc.sizingRem(font-size, wide, 13px, sp, 11px);
+    margin-top: 10px;
   }
 }
 
